:bug: 修正jinja模板中的错误

--- a/nonebot_bison/theme/themes/ceobe_canteen/templates/ceobe_canteen.html.jinja
+++ b/nonebot_bison/theme/themes/ceobe_canteen/templates/ceobe_canteen.html.jinja
@@ -11,7 +11,7 @@
         {% endif %}
         {% if card.content.text %}
         <div class="main-content">{{ card.content.text }}</div>
-        {% if card.content.retweet %}
+        {% if card.retweet %}
         <div class="retweet">
             {% if card.retweet.author %}
             <div class="origin-author">{{ card.retweet.author }}</div>
